@@ -18,6 +18,7 @@ package org.apache.jackrabbit.oak.spi.security.authentication.credentials;
 
 import java.util.Collection;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Supplier;
@@ -26,7 +27,6 @@ import javax.jcr.Credentials;
 
 import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
-import static org.apache.jackrabbit.guava.common.collect.Sets.newHashSet;
 
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -54,11 +54,11 @@ public final class CompositeCredentialsSupport implements CredentialsSupport {
     public Set<Class> getCredentialClasses() {
         Collection<CredentialsSupport> all = this.credentialSupplier.get();
         if (all.isEmpty()) {
-            return ImmutableSet.of();
+            return Set.of();
         } else if (all.size() == 1) {
             return all.iterator().next().getCredentialClasses();
         } else {
-            Set<Class> classes = newHashSet();
+            Set<Class> classes = new HashSet<>();
             for (CredentialsSupport c : all) {
                 classes.addAll(c.getCredentialClasses());
             }
